# cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  run-tests.sh  run.sh
src/: main.cpp
tests/: sample-test.cpp
